@@ -17,3 +17,4 @@ Ruediger Hanke <tomjoad@muenster.de>
 Simon Quinn <simonquinn@users.sourceforge.net>
 Christoph Reichenbach <jameson@linuxgames.com>
 Phillip T. George <me@PhillipGeorge.com>
+Malignant Manor <malignantmanor@users.sourceforge.net>
